[gd_scene load_steps=6 format=2]

[ext_resource path="res://producto/assets/img/enemigos/Sombra.png" type="Texture" id=1]
[ext_resource path="res://producto/scripts/Item.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.14286, 5.5 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 1.05
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}

[node name="Item" type="Area2D"]
scale = Vector2( 1.75, 1.75 )
script = ExtResource( 2 )

[node name="Sombra" type="Sprite" parent="."]
position = Vector2( 1.19209e-07, 4 )
scale = Vector2( 0.369048, 0.423913 )
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -9.53674e-07, 0 )
scale = Vector2( 0.0966666, 0.0944445 )
hframes = 7
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.5 )
shape = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/idle = SubResource( 3 )

[connection signal="area_entered" from="." to="." method="_on_Item_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Item_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_Item_body_entered"]
